[package]
name = "ircd"
version = "0.1.0"
edition = "2018"

[workspace]
members = [ "ircd_macros" ]

[dependencies]
ircd_macros = { path = "ircd_macros" }
log = "0.4"
simple_logger = "1"
futures = "0.3"
async-std = "1.7"
async-broadcast = "0.3"
inventory = "0.1"
thiserror = "1"
gossip = "0.0.3"
serde = "1"
serde_json = "1"