[workspace]
resolver = "2"
package.name = "sable"
package.version = "0.0.1"
members = [
    "auth_client",
    "client_listener",
    "sable_ircd",
    "sable_ipc",
    "sable_history",
    "sable_macros",
    "sable_network",
    "sable_server",
    "sable_services",
]

# Incremental builds break inventory
[profile.dev]
panic = "abort"
