[package]
name = "auth_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client_listener = { path = "../client_listener" }
irc_network = { path = "../irc_network" }

tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio-unix-ipc = "0.2"
tokio = { version = "1.14", features = [ "full" ] }
libc = "0.2"
trust-dns-resolver = "0.20"
