[package]
name = "client_listener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sable_macros = { path = "../sable_macros" }
sable_ipc = { path = "../sable_ipc" }
bincode = "1.3"
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio-rustls = "0.23"
tokio = { version = "1.14", features = [ "full" ] }
libc = "0.2"
nix = "0.24"
hex = "0.4"
sha1 = "0.10"
x509-parser = "0.13"


# dangerous_configuration is needed to manually implement ClientCertVerifier and
# accept client certificates without validating them
rustls = { version = "0.20", features = [ "dangerous_configuration"] }

console-subscriber = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
memfd = "0.4"
