[package]
name = "irc_network"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ircd_macros = { path = "../ircd_macros" }
irc_strings = { path = "../irc_strings" }
log = "0.4"
inventory = "0.1"
thiserror = "1"
serde_json = "1"
arrayvec = {version = "0.7", features = [ "serde" ] }
hashers = "1"
strum = { version = "0.23", features = [ "derive" ] }
serde_with = "1.11"
itertools = "0.10"

[dependencies.serde]
version = "1"
features = [ "derive" ]