[package]
name = "irc_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ircd_macros = { path = "../ircd_macros" }
irc_network = { path = "../irc_network" }
irc_strings = { path = "../irc_strings" }
rpc_protocols = { path = "../rpc_protocols" }
client_listener = { path = "../client_listener" }
auth_client = { path = "../auth_client" }

log = "0.4"
inventory = "0.1"
thiserror = "1"
serde_json = "1"
chrono = "0.4"
ambassador = "0.2"
strum = { version = "0.23", features = [ "derive" ] }
pwhash = "1"
tokio-rustls = "0.23"
rustls = "0.20"

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.tokio]
version = "1.14"
features = [ "full" ]
