[package]
name = "ircd"
version = "0.1.0"
edition = "2018"

[dependencies]

ircd_macros = { path = "../ircd_macros" }
ircd_sync = { path = "../ircd_sync" }
irc_network = { path = "../irc_network" }
irc_server = { path = "../irc_server" }

log = "0.4"
simple_logger = "1"
tokio = "1.14"
async-broadcast = "0.3"
thiserror = "1"
serde = "1"
serde_json = "1"
ctrlc = "3"
structopt = "0.3"