[package]
name = "ircd"
version = "0.1.0"
edition = "2018"

[features]
debug = []

[dev-dependencies]
stringreader = "0.1"

[dependencies]

ircd_macros = { path = "../ircd_macros" }
ircd_sync = { path = "../ircd_sync" }
irc_network = { path = "../irc_network" }
irc_server = { path = "../irc_server" }
client_listener = { path = "../client_listener" }
rpc_protocols = { path = "../rpc_protocols" }

tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
console-subscriber = "0.1"

tokio = "1.14"
tokio-rustls = "0.23"
thiserror = "1"
serde = "1"
serde_json = "1"
ctrlc = "3"
structopt = "0.3"
chrono = "0.4"
rustls = "0.20"
rustls-pemfile = "0.2"
hyper = { version = "0.14", features = [ "server", "tcp", "http1" ] }
memfd = "0.4"
sha1 = "0.10"
hex = "0.4"
daemonize = "0.4"
nix = "0.24"