[package]
name = "ircd_sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc_network = { path = "../irc_network" }
rpc_protocols = { path = "../rpc_protocols" }
rand = "0.8"
tokio = { version = "1.14", features = [ "full" ] }
tokio-rustls = "0.23"
futures = "0.3"
tracing = "0.1"
serde_json = "1"
thiserror = "1"
rustls = "0.20"
rustls-pemfile = "0.2"
chrono = "0.4"
x509-parser = "0.13"


[dependencies.serde]
version = "1"
features = [ "derive" ]