[package]
name = "sable_history"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.5", features = [ "git2" ] }

[dependencies]
sable_network = { path = "../sable_network" }
sable_server = { path = "../sable_server" }

tokio = { version = "1.14", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
serde_with = "1.11"
serde_json = "1"

thiserror = "1"
parking_lot = { version = "0.12", features = [ "serde" ] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = [ "derive" ] }
chrono = "0.4"
uuid = { version = "1.9.1", features = ["v7", "fast-rng", "serde"] }

diesel = { version = "2.2", features = [ "postgres", "chrono", "uuid" ] }
diesel-async = { version = "0.5", features = [ "postgres" ] }