[package]
name = "sable_ircd"
version = "0.1.0"
edition = "2021"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sable_history = { path = "../sable_history" }
sable_macros = { path = "../sable_macros" }
sable_network = { path = "../sable_network" }
sable_server = { path = "../sable_server" }
client_listener = { path = "../client_listener" }
auth_client = { path = "../auth_client" }

tracing = "0.1"
inventory = "0.3"
thiserror = "1"
chrono = "0.4"
strum = { version = "0.23", features = [ "derive" ] }
pwhash = "1"
tokio-rustls = "0.23"
rustls = "0.20"
bitflags = "1.3"
itertools = "0.10"
serde = { version = "1", features = [ "derive" ] }
serde_with = "2"
tokio = { version = "1.14", features = [ "full" ] }
futures = "0.3"
rand = "0.8"
sha256 = "1"
concurrent-queue = "1.2.4"
arc-swap = { version = "1.5", features = [ "serde" ] }
parking_lot = { version = "0.12", features = [ "serde" ] }
async-trait = "0.1.57"
structopt = "0.3"
base64 = "0.21"
anyhow = "1.0"
serde_json = "1"
