[package]
name = "sable_network"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.5", features = [ "git2" ] }

[dependencies]
sable_macros = { path = "../sable_macros" }

tracing = "0.1"
thiserror = "1"
serde_json = "1"
chrono = "0.4"
ambassador = "0.2"
strum = { version = "0.23", features = [ "derive" ] }
pwhash = "1"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"
bitflags = "1.3"
itertools = "0.10"
futures = "0.3"
x509-parser = "0.13"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
arrayvec = { version = "0.7", features = [ "serde" ] }
hashers = "1"
serde_with = "1.11"
parking_lot = { version = "0.12", features = [ "serde" ] }
wildmatch = "2.1"
concurrent_log = { version = "0.2.4", features = [ "serde" ] }
once_cell = "1.13"

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.tokio]
version = "1.14"
features = [ "full" ]
