[package]
name = "sable_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sable_network = { path = "../sable_network" }
sable_server = { path = "../sable_server" }

tokio = { version = "1.14", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
serde_with = "1.11"
serde_json = "1"

async-trait = "0.1.57"
thiserror = "1"
parking_lot = { version = "0.12", features = [ "serde" ] }
ouroboros = "0.15"
bcrypt = "0.13"
tracing = "0.1"
structopt = "0.3"
dashmap = "5"